# hightime

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  SECURITY.md  poetry.toml  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/workflows/: CI.yml  PR.yml  check_docs.yml  check_hightime.yml  publish-to-pypi.yml  publish.yml  report_test_results.yml  run_unit_tests.yml  sync_github_issues_to_azdo.yml  test-python-package.yml  test.yml
debian/: changelog  control
docs/: conf.py  index.rst
hightime/: __init__.py  _datetime.py  _datetime.pyi  _timedelta.py  _timedelta.pyi  highdatetime.py  hightimedelta.py  sitimeunit.py  util.py
hightime/test/: test_highdatetime.py  test_hightimedelta.py
tests/: __init__.py  othertime.py  shorthands.py  test_datetime.py  test_timedelta.py
